Fix dto