@@ -1,5 +1,7 @@
 package com.example.demo.services.implementation;
 
+import com.example.demo.dto.PayrollDTO;
+import com.example.demo.dto.TransferDTO;
 import com.example.demo.dto.WorkerDTO;
 import com.example.demo.entities.Worker;
 import com.example.demo.exceptions.transferExceptions.TransferBadRequestException;
@@ -7,7 +9,8 @@ import com.example.demo.exceptions.workerExceptions.WorkerBadRequestException;
 import com.example.demo.exceptions.workerExceptions.WorkerConflictException;
 import com.example.demo.exceptions.workerExceptions.WorkerNotFoundException;
 import com.example.demo.exceptions.workerExceptions.WorkerUnauthorizedException;
-import com.example.demo.mapper.WorkerMapper;
+import com.example.demo.mapper.PayrollMapper;
+import com.example.demo.mapper.TransferMapper;
 import com.example.demo.repositories.PayrollRepository;
 import com.example.demo.repositories.TransferRepository;
 import com.example.demo.repositories.WorkerRepository;
@@ -17,8 +20,8 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class WorkerServiceImp implements WorkerService {
@@ -45,7 +48,7 @@ public class WorkerServiceImp implements WorkerService {
         String name = worker.getName();
         if (name.isEmpty() || name.isBlank()) throw new WorkerBadRequestException();
 
-        return WorkerMapper.INSTANCE.modelToDTO(workerRepository.save(worker));
+        return workerToDTO(workerRepository.save(worker));
     }
 
     @Override
@@ -66,19 +69,19 @@ public class WorkerServiceImp implements WorkerService {
         if (amount < 0) throw new TransferBadRequestException();
         fromDB.setSalary(fromDB.getSalary() + amount);
         workerRepository.save(fromDB);
-        return WorkerMapper.INSTANCE.modelToDTO(fromDB);
+        return workerToDTO(fromDB);
     }
 
     @Override
     public WorkerDTO workerInformation(String id) throws WorkerNotFoundException {
         Worker result = getWorker(id);
         if (result == null) throw new WorkerNotFoundException();
-        return WorkerMapper.INSTANCE.modelToDTO(result);
+        return workerToDTO(result);
     }
 
     public List<WorkerDTO> getAllWorkers(String pass) throws WorkerUnauthorizedException {
         if (!LORE.equals(pass)) throw new WorkerUnauthorizedException();
-        return workerRepository.findAll().stream().map(WorkerMapper.INSTANCE::modelToDTO).collect(Collectors.toList());
+        return workerRepository.findAll().stream().map(this::workerToDTO).toList();
     }
     //endregion
 
@@ -91,6 +94,25 @@ public class WorkerServiceImp implements WorkerService {
         worker.getPayrolls().forEach(payrollId -> payrollRepository.deleteById((payrollId)));
         worker.getTransfersEmitted().forEach(transferId -> transferRepository.deleteById(transferId));
         worker.getTransfersReceived().forEach(transferId -> transferRepository.deleteById(transferId));
+    }
+
+    private WorkerDTO workerToDTO(Worker worker) {
+        List<TransferDTO> transferEmitted = worker.getTransfersEmitted() == null ? new ArrayList<>() : worker.getTransfersEmitted().stream()
+                .map(id -> transferRepository.findById(id)
+                        .map(TransferMapper.INSTANCE::mapToDTO)
+                        .orElse(null))
+                .toList();
+        List<TransferDTO> transferReceived = worker.getTransfersReceived() == null ? new ArrayList<>() : worker.getTransfersReceived().stream()
+                .map(id -> transferRepository.findById(id)
+                        .map(TransferMapper.INSTANCE::mapToDTO)
+                        .orElse(null))
+                .toList();
+        List<PayrollDTO> payroll = worker.getPayrolls().stream() == null ? new ArrayList<>() : worker.getPayrolls().stream()
+                .map(id -> payrollRepository.findById(id)
+                        .map(PayrollMapper.INSTANCE::mapToDTO)
+                        .orElse(null))
+                .toList();
+        return new WorkerDTO(worker, transferEmitted, transferReceived, payroll);
     }
     //endregion
 }
